fixed some styles

--- a/vehicles-grid.html
+++ b/vehicles-grid.html
@@ -65,7 +65,7 @@
         <!-- start filters -->
         <button class="btn btn-primary d-md-none m-1" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            Filters
+            Filters <i class="fas fa-filter"></i>
         </button>
         <div class="collapse d-md-block" id="collapseExample">
             <div class="row justify-content-center">
@@ -138,67 +138,35 @@
         <!-- grid view  start -->
         <div class="cars-grid">
             <div class="row">
-                <div class="col-md-12 col-lg-6">
+                <div class="col-md-12 col-lg-6 g-0">
                     <div class="row p-2 border rounded shadow m-1">
-                        <div class="col-3 d-flex justify-content-center align-items-center">
+                        <div class="col-md-3 d-flex justify-content-center align-items-center">
                             <img src="./assets/images/2.jpg" alt="" class="img-fluid">
                         </div>
-                        <div class="col-5 p-1">
-                            <p class="fs-4 fw-bold">Mahindra XUV 100</p>
+                        <div class="col-md-5 p-1">
+                            <p class="fs-5 fw-bold">Mahindra XUV 100</p>
                             <i class="fas fa-gas-pump"></i> <span>Diesel</span>
-                            <i class="fas fa-arrows-alt ms-2"></i>
+                            <i class="fas fa-cogs ms-2"></i>
                             <span class="carAttribute">Automatic</span>
                         </div>
-                        <div class="col-4 p-1 d-flex justify-content-center align-items-center">
-                            <p class="fs-4 fw-bolder">₹ 1100 <i class="fs-6 fw-light">/month</i></p>
+                        <div class="col-md-4 p-1 d-flex justify-content-center align-items-center">
+                            <p class="fs-5 fw-bolder">₹ 1100 <i class="fs-6 fw-light">/month</i></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12 col-lg-6 ">
+                <div class="col-md-12 col-lg-6 g-0">
                     <div class="row p-2 border rounded shadow m-1">
-                        <div class="col-3 d-flex justify-content-center align-items-center">
+                        <div class="col-md-3 d-flex justify-content-center align-items-center">
                             <img src="./assets/images/3.jpg" alt="" class="img-fluid">
                         </div>
-                        <div class="col-5 p-1">
-                            <p class="fs-4 fw-bold">Mahindra XUV 100</p>
+                        <div class="col-md-5 p-1">
+                            <p class="fs-5 fw-bold">Mahindra XUV 100</p>
                             <i class="fas fa-gas-pump"></i> <span>Diesel</span>
-                            <i class="fas fa-arrows-alt ms-2"></i>
+                            <i class="fas fa-cogs ms-2"></i>
                             <span class="carAttribute">Automatic</span>
                         </div>
-                        <div class="col-4 p-1 d-flex justify-content-center align-items-center">
-                            <p class="fs-4 fw-bolder">₹ 1100 <i class="fs-6 fw-light">/month</i></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12 col-lg-6">
-                    <div class="row p-2 border rounded shadow m-1">
-                        <div class="col-3 d-flex justify-content-center align-items-center">
-                            <img src="./assets/images/4.jpg" alt="" class="img-fluid">
-                        </div>
-                        <div class="col-5 p-1">
-                            <p class="fs-4 fw-bold">Mahindra XUV 100</p>
-                            <i class="fas fa-gas-pump"></i> <span>Diesel</span>
-                            <i class="fas fa-arrows-alt ms-2"></i>
-                            <span class="carAttribute">Automatic</span>
-                        </div>
-                        <div class="col-4 p-1 d-flex justify-content-center align-items-center">
-                            <p class="fs-4 fw-bolder">₹ 1100 <i class="fs-6 fw-light">/month</i></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-12 col-lg-6">
-                    <div class="row p-2 border rounded shadow m-1">
-                        <div class="col-3 d-flex justify-content-center align-items-center">
-                            <img src="./assets/images/car.jpg" alt="" class="img-fluid">
-                        </div>
-                        <div class="col-5 p-1">
-                            <p class="fs-4 fw-bold">Mahindra XUV 100</p>
-                            <i class="fas fa-gas-pump"></i> <span>Diesel</span>
-                            <i class="fas fa-arrows-alt ms-2"></i>
-                            <span class="carAttribute">Automatic</span>
-                        </div>
-                        <div class="col-4 p-1 d-flex justify-content-center align-items-center">
-                            <p class="fs-4 fw-bolder">₹ 1100 <i class="fs-6 fw-light">/month</i></p>
+                        <div class="col-md-4 p-1 d-flex justify-content-center align-items-center">
+                            <p class="fs-5 fw-bolder">₹ 1100 <i class="fs-6 fw-light">/month</i></p>
                         </div>
                     </div>
                 </div>
