--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section id="hero-section">
         <div class="container-fluid bg-dark">
             <div class="row ">
-                <div class="col-md-6 d-flex align-items-center justify-content-center">
+                <div class="col-md-6 g-0 d-flex align-items-center justify-content-center">
                     <div class="rentals bg-light">
                         <div class="text-center pt-3">
                             <img src="./assets/images/logo.svg" alt="">
