--- a/vehicles-grid.html
+++ b/vehicles-grid.html
@@ -143,7 +143,7 @@
                         <div class="col-md-3 d-flex justify-content-center align-items-center">
                             <img src="./assets/images/2.jpg" alt="" class="img-fluid">
                         </div>
-                        <div class="col-md-5 p-1">
+                        <div class="col-md-5 p-1 text-center">
                             <p class="fs-5 fw-bold">Mahindra XUV 100</p>
                             <i class="fas fa-gas-pump"></i> <span>Diesel</span>
                             <i class="fas fa-cogs ms-2"></i>
@@ -159,7 +159,7 @@
                         <div class="col-md-3 d-flex justify-content-center align-items-center">
                             <img src="./assets/images/3.jpg" alt="" class="img-fluid">
                         </div>
-                        <div class="col-md-5 p-1">
+                        <div class="col-md-5 p-1 text-center">
                             <p class="fs-5 fw-bold">Mahindra XUV 100</p>
                             <i class="fas fa-gas-pump"></i> <span>Diesel</span>
                             <i class="fas fa-cogs ms-2"></i>
