--- a/vehicles-grid.html
+++ b/vehicles-grid.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="./vehicles-grid.html">Grid</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="./vehicle-detail.html">Vehicle Detail</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">FAQs</a>
