--- a/index.html
+++ b/index.html
@@ -112,8 +112,67 @@
             </div>
         </div>
     </section>
-
     <!-- end hero section -->
+    <!-- features section -->
+    <section style="background-color: rgba(239, 245, 245, 0.74);">
+        <div class="container px-4 py-5 text-center" >
+            <h2 class="pb-2 border-bottom fs-2 ">Kashmir Rentals Advantage</h2>
+            <p class=" lead text-muted">We simplified car rentals, so you can focus on what's important to you.</p>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <div class="feature col-md-4 p-2">
+                    <div class="feature-icon">
+                        <img src="./assets/images/icons/fuel.svg" alt="" width="80px" height="80px"
+                            class="feature-icon">
+                    </div>
+                    <h2 class="fw-normal fs-3">Fuel Cost Included</h2>
+                    <p >Don't worry about mileage! All fuel costs are included. If you refill fuel, we'll pay you back!
+                    </p>
+                </div>
+                <div class="feature col-md-4">
+                    <div class="feature-icon">
+                        <img src="./assets/images/icons/no-hidden-charges.svg" alt="" width="80px" height="80px"
+                            class="feature-icon">
+                    </div>
+                    <h2 class="fw-normal fs-3">No Hidden Charges</h2>
+                    <p>Our prices include taxes and insurance.
+                        What you see is what you really pay!</p>
+                </div>
+                <div class="feature col-md-4">
+                    <div class="feature-icon">
+                        <img src="./assets/images/icons/flexi-pricing.svg" alt="" width="80px" height="80px"
+                            class="feature-icon">
+                    </div>
+                    <h2  class="fw-normal fs-3">Flexi Pricing Packages</h2>
+                    <p>One size never fits all! Choose a balance of time and kilometers that works best for you.</p>
+                </div>
+                <div class="feature col-md-4">
+                    <div class="feature-icon">
+                        <img src="./assets/images/icons/go-anywhere.svg" alt="" width="80px" height="80px"
+                            class="feature-icon">
+                    </div>
+                    <h2  class="fw-normal fs-3">Go Anywhere</h2>
+                    <p>Our cars have all-India permits.  Just remember to pay state tolls and entry taxes.</p>
+                </div>
+                <div class="feature col-md-4">
+                    <div class="feature-icon">
+                        <img src="./assets/images/icons/road-side-assistance.svg" alt="" width="80px" height="80px"
+                            class="feature-icon">
+                    </div>
+                    <h2  class="fw-normal fs-3">24x7 Roadside Assistance</h2>
+                    <p>We have round-the-clock, pan India partners. Help is never far away from you.</p>
+                </div>
+                <div class="feature col-md-4">
+                    <div class="feature-icon">
+                        <img src="./assets/images/icons/insurance.svg" alt="" width="80px" height="80px"
+                            class="feature-icon">
+                    </div>
+                    <h2  class="fw-normal fs-3">Damage Insurance</h2>
+                    <p>All your bookings include damage insurance! Drive safe, but don’t worry!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end features section -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
