--- a/login.html
+++ b/login.html
@@ -74,6 +74,8 @@
                 </label>
             </div>
             <button class="btn btn-md btn-primary" type="submit">Sign in</button>
+            <p>Don't have an accountyet? <a href="./signup.html">Sign Up</a></p>
+            
          
         </form>
 
