added two sections to home page

--- a/login.html
+++ b/login.html
@@ -46,8 +46,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">FAQs</a>
                     </li>
-                </ul>
-                <button class="btn btn-outline-success signup-btn" type="submit">Signup</button>
+                </ul><a href="./signup.html"><button class="btn btn-outline-success signup-btn" type="submit">Signup</button></a>
             </div>
         </div>
     </nav>
