--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                         <a class="nav-link" href="#">FAQs</a>
                     </li>
                 </ul>
-                <button class="btn btn-outline-success signup-btn" type="submit">Signup</button>
+                <a href="./signup.html"><button class="btn btn-outline-success signup-btn" type="submit">Signup</button></a>
+
             </div>
         </div>
     </nav>
@@ -115,17 +116,17 @@
     <!-- end hero section -->
     <!-- features section -->
     <section style="background-color: rgba(239, 245, 245, 0.74);">
-        <div class="container px-4 py-5 text-center" >
+        <div class="container px-4 py-5 text-center">
             <h2 class="pb-2 border-bottom fs-2 ">Kashmir Rentals Advantage</h2>
             <p class=" lead text-muted">We simplified car rentals, so you can focus on what's important to you.</p>
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-                <div class="feature col-md-4 p-2">
+                <div class="feature col-md-4">
                     <div class="feature-icon">
                         <img src="./assets/images/icons/fuel.svg" alt="" width="80px" height="80px"
                             class="feature-icon">
                     </div>
                     <h2 class="fw-normal fs-3">Fuel Cost Included</h2>
-                    <p >Don't worry about mileage! All fuel costs are included. If you refill fuel, we'll pay you back!
+                    <p>Don't worry about mileage! All fuel costs are included. If you refill fuel, we'll pay you back!
                     </p>
                 </div>
                 <div class="feature col-md-4">
@@ -142,7 +143,7 @@
                         <img src="./assets/images/icons/flexi-pricing.svg" alt="" width="80px" height="80px"
                             class="feature-icon">
                     </div>
-                    <h2  class="fw-normal fs-3">Flexi Pricing Packages</h2>
+                    <h2 class="fw-normal fs-3">Flexi Pricing Packages</h2>
                     <p>One size never fits all! Choose a balance of time and kilometers that works best for you.</p>
                 </div>
                 <div class="feature col-md-4">
@@ -150,7 +151,7 @@
                         <img src="./assets/images/icons/go-anywhere.svg" alt="" width="80px" height="80px"
                             class="feature-icon">
                     </div>
-                    <h2  class="fw-normal fs-3">Go Anywhere</h2>
+                    <h2 class="fw-normal fs-3">Go Anywhere</h2>
                     <p>Our cars have all-India permits.  Just remember to pay state tolls and entry taxes.</p>
                 </div>
                 <div class="feature col-md-4">
@@ -158,7 +159,7 @@
                         <img src="./assets/images/icons/road-side-assistance.svg" alt="" width="80px" height="80px"
                             class="feature-icon">
                     </div>
-                    <h2  class="fw-normal fs-3">24x7 Roadside Assistance</h2>
+                    <h2 class="fw-normal fs-3">24x7 Roadside Assistance</h2>
                     <p>We have round-the-clock, pan India partners. Help is never far away from you.</p>
                 </div>
                 <div class="feature col-md-4">
@@ -166,13 +167,64 @@
                         <img src="./assets/images/icons/insurance.svg" alt="" width="80px" height="80px"
                             class="feature-icon">
                     </div>
-                    <h2  class="fw-normal fs-3">Damage Insurance</h2>
+                    <h2 class="fw-normal fs-3">Damage Insurance</h2>
                     <p>All your bookings include damage insurance! Drive safe, but don’t worry!</p>
                 </div>
             </div>
         </div>
     </section>
     <!-- end features section -->
+
+    <!-- how it works section -->
+    <section style="background-color: rgba(239, 245, 245, 0.74);">
+        <div class="container  text-center px-5 pb-5">
+            <div class="row">
+                <div class="col-sm-12 col-md-12">
+                    <h2 class="pb-2 border-bottom fs-2 ">How it Works</h2>
+                                <p class=" lead text-muted">Drive yourself to an adventure and back in 4 simple steps</p>
+                    <div class="row py-5">
+                        <hr class="htwDashedLine">
+                        <div class="col-md-3 col-sm-6 col-xs-12 ">
+                            <div class="how-it-works-icon-background">
+                                <img src="./assets/images/how-it-works/book -and-pay.svg" alt="" width="60px"
+                                    height="60px" class="how-it-works-icon">
+                            </div>
+                            <h4 class="my-2">Book &amp; Pay</h4>
+                            <p>Pick your favourite car, time and place</p>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 ">
+                            <div class="how-it-works-icon-background">
+                                <img src="./assets/images/how-it-works/receive.svg" alt="" width="60px" height="60px"
+                                    class="how-it-works-icon">
+                            </div>
+                            <h4 class="my-2">Receive </h4>
+                            <p>We will deliver the car to your doorstep</p>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 ">
+                            <div class="how-it-works-icon-background">
+                                <img src="./assets/images/how-it-works/drive.svg" alt="" width="60px" height="60px"
+                                    class="how-it-works-icon">
+                            </div>
+                            <h4 class="my-2">Drive </h4>
+                            <p>Enjoy your Revv self drive</p>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12 ">
+                            <div class="how-it-works-icon-background">
+                                <img src="./assets/images/how-it-works/return.svg" alt="" width="60px" height="60px"
+                                    class="how-it-works-icon">
+                            </div>
+                            <h4 class="my-2">Return</h4>
+                            <p>Get the car back to your preferred return location, and we
+                                will take it from there</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- end of how it works section -->
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
