removed hr in small devices

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <h2 class="pb-2 border-bottom fs-2 ">How it Works</h2>
                                 <p class=" lead text-muted">Drive yourself to an adventure and back in 4 simple steps</p>
                     <div class="row py-5">
-                        <hr class="htwDashedLine">
+                        <hr class="htwDashedLine d-none d-md-block">
                         <div class="col-md-3 col-sm-6 col-xs-12 ">
                             <div class="how-it-works-icon-background">
                                 <img src="./assets/images/how-it-works/book -and-pay.svg" alt="" width="60px"
