added video sections

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                         <a class="nav-link" href="#">FAQs</a>
                     </li>
                 </ul>
-                <a href="./signup.html"><button class="btn btn-outline-success signup-btn" type="submit">Signup</button></a>
+                <a href="./signup.html"><button class="btn btn-outline-success signup-btn"
+                        type="submit">Signup</button></a>
 
             </div>
         </div>
@@ -117,71 +118,97 @@
     <!-- features section -->
     <section style="background-color: rgba(239, 245, 245, 0.74);">
         <div class="container px-4 py-5 text-center">
-            <h2 class="pb-2 border-bottom fs-2 ">Kashmir Rentals Advantage</h2>
+            <h2 class="pb-2 border-bottom fs-3 text-muted text-uppercase">Kashmir Rentals Advantage</h2>
             <p class=" lead text-muted">We simplified car rentals, so you can focus on what's important to you.</p>
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                 <div class="feature col-md-4">
                     <div class="feature-icon">
-                        <img src="./assets/images/icons/fuel.svg" alt="" width="80px" height="80px"
+                        <img src="./assets/images/icons/fuel.svg" alt="" width="60px" height="60px"
                             class="feature-icon">
                     </div>
-                    <h2 class="fw-normal fs-3">Fuel Cost Included</h2>
+                    <h2 class="fw-normal fs-4 my-1">Fuel Cost Included</h2>
                     <p>Don't worry about mileage! All fuel costs are included. If you refill fuel, we'll pay you back!
                     </p>
                 </div>
                 <div class="feature col-md-4">
                     <div class="feature-icon">
-                        <img src="./assets/images/icons/no-hidden-charges.svg" alt="" width="80px" height="80px"
+                        <img src="./assets/images/icons/no-hidden-charges.svg" alt="" width="60px" height="60px"
                             class="feature-icon">
                     </div>
-                    <h2 class="fw-normal fs-3">No Hidden Charges</h2>
+                    <h2 class="fw-normal fs-4 my-1">No Hidden Charges</h2>
                     <p>Our prices include taxes and insurance.
                         What you see is what you really pay!</p>
                 </div>
                 <div class="feature col-md-4">
                     <div class="feature-icon">
-                        <img src="./assets/images/icons/flexi-pricing.svg" alt="" width="80px" height="80px"
+                        <img src="./assets/images/icons/flexi-pricing.svg" alt="" width="60px" height="60px"
                             class="feature-icon">
                     </div>
-                    <h2 class="fw-normal fs-3">Flexi Pricing Packages</h2>
+                    <h2 class="fw-normal fs-4 my-1">Flexi Pricing Packages</h2>
                     <p>One size never fits all! Choose a balance of time and kilometers that works best for you.</p>
                 </div>
                 <div class="feature col-md-4">
                     <div class="feature-icon">
-                        <img src="./assets/images/icons/go-anywhere.svg" alt="" width="80px" height="80px"
+                        <img src="./assets/images/icons/go-anywhere.svg" alt="" width="60px" height="60px"
                             class="feature-icon">
                     </div>
-                    <h2 class="fw-normal fs-3">Go Anywhere</h2>
+                    <h2 class="fw-normal fs-4 my-1">Go Anywhere</h2>
                     <p>Our cars have all-India permits.  Just remember to pay state tolls and entry taxes.</p>
                 </div>
                 <div class="feature col-md-4">
                     <div class="feature-icon">
-                        <img src="./assets/images/icons/road-side-assistance.svg" alt="" width="80px" height="80px"
+                        <img src="./assets/images/icons/road-side-assistance.svg" alt="" width="60px" height="60px"
                             class="feature-icon">
                     </div>
-                    <h2 class="fw-normal fs-3">24x7 Roadside Assistance</h2>
+                    <h2 class="fw-normal fs-4 my-1">24x7 Roadside Assistance</h2>
                     <p>We have round-the-clock, pan India partners. Help is never far away from you.</p>
                 </div>
                 <div class="feature col-md-4">
                     <div class="feature-icon">
-                        <img src="./assets/images/icons/insurance.svg" alt="" width="80px" height="80px"
+                        <img src="./assets/images/icons/insurance.svg" alt="" width="60px" height="60px"
                             class="feature-icon">
                     </div>
-                    <h2 class="fw-normal fs-3">Damage Insurance</h2>
+                    <h2 class="fw-normal fs-4 my-1">Damage Insurance</h2>
                     <p>All your bookings include damage insurance! Drive safe, but don’t worry!</p>
                 </div>
             </div>
         </div>
     </section>
     <!-- end features section -->
+    <!-- fixed background image -->
+    <section>
 
+        <div class="fixed-background">
+            <div class="row dark text-center">
+                <div class="col-12">
+                    <h3 class="fs-2 text-uppercase ">book your car now!</h3>
+                </div>
+                <div class="col-12 py-5">
+                    <p class="fs-4 lead ">Make a booking, unlock your car, and end your reservation all from our
+                        webiste
+                        / app.</p>
+                    <button type="button" class="btn btn-outline-light btn-lg mt-1">Get Started</button>
+                </div>
+            </div> <!-- end of row -->
+            <div class="fixed-wrap">
+                <div class="fixed">
+
+                </div>
+            </div>
+
+
+        </div> <!-- end of fixed background -->
+
+    </section>
+
+    <!-- end of fixed background image -->
     <!-- how it works section -->
     <section style="background-color: rgba(239, 245, 245, 0.74);">
-        <div class="container  text-center px-5 pb-5">
+        <div class="container  text-center px-5 py-5">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
-                    <h2 class="pb-2 border-bottom fs-2 ">How it Works</h2>
-                                <p class=" lead text-muted">Drive yourself to an adventure and back in 4 simple steps</p>
+                    <h2 class="pb-2 border-bottom  fs-3 text-muted text-uppercase ">How it Works</h2>
+                    <p class=" lead text-muted">Drive yourself to an adventure and back in 4 simple steps</p>
                     <div class="row py-5">
                         <hr class="htwDashedLine d-none d-md-block">
                         <div class="col-md-3 col-sm-6 col-xs-12 ">
@@ -189,7 +216,7 @@
                                 <img src="./assets/images/how-it-works/book -and-pay.svg" alt="" width="60px"
                                     height="60px" class="how-it-works-icon">
                             </div>
-                            <h4 class="my-2">Book &amp; Pay</h4>
+                            <h5 class="my-2">Book &amp; Pay</h5>
                             <p>Pick your favourite car, time and place</p>
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-12 ">
@@ -197,7 +224,7 @@
                                 <img src="./assets/images/how-it-works/receive.svg" alt="" width="60px" height="60px"
                                     class="how-it-works-icon">
                             </div>
-                            <h4 class="my-2">Receive </h4>
+                            <h5 class="my-2">Receive </h5>
                             <p>We will deliver the car to your doorstep</p>
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-12 ">
@@ -205,7 +232,7 @@
                                 <img src="./assets/images/how-it-works/drive.svg" alt="" width="60px" height="60px"
                                     class="how-it-works-icon">
                             </div>
-                            <h4 class="my-2">Drive </h4>
+                            <h5 class="my-2">Drive </h5>
                             <p>Enjoy your Revv self drive</p>
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-12 ">
@@ -213,7 +240,7 @@
                                 <img src="./assets/images/how-it-works/return.svg" alt="" width="60px" height="60px"
                                     class="how-it-works-icon">
                             </div>
-                            <h4 class="my-2">Return</h4>
+                            <h5 class="my-2">Return</h5>
                             <p>Get the car back to your preferred return location, and we
                                 will take it from there</p>
                         </div>
@@ -224,6 +251,26 @@
         </div>
     </section>
     <!-- end of how it works section -->
+
+    <!-- video section  -->
+    <section class="video section">
+        <div class="row g-0">
+            <div class="col-md-9">
+                <div class="video-container">
+                    <video id="video" autoplay loop muted playsinline>
+                        <source src="./assets/video/car.mp4" type="video/mp4" />
+                    </video>
+                </div>
+            </div>
+            <div class="col-md-3 bg-dark text-white text-center">
+                <h5>here will be download our app image </h5>
+            </div>
+        </div>
+    </section>
+    <!-- end video section -->
+
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
