added detail table

--- a/signup.html
+++ b/signup.html
@@ -54,9 +54,9 @@
     <!-- end navbar -->
 
     <div class="container">
-        <div class="row " >
+        <div class="row  mt-2 p-1" >
             <div class="col-md-6">
-                <img src="./assets/images/login-signup/signup.svg" alt="" class="img-fluid">
+                <img src="./assets/images/login-signup/signup.svg" alt="" class="img-fluid mb-2">
             </div>
             <div class="col-md-6">
                 <form class="row g-2 needs-validation" novalidate>
