--- a/vehicle-detail.html
+++ b/vehicle-detail.html
@@ -46,7 +46,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">FAQs</a>
                     </li>
-                </ul><a href="./signup.html"><button class="btn btn-outline-success signup-btn" type="submit">Signup</button></a>
+                </ul><a href="./signup.html"><button class="btn btn-outline-success signup-btn"
+                        type="submit">Signup</button></a>
             </div>
         </div>
     </nav>
@@ -116,7 +117,30 @@
                     </div>
                 </div>
                 <h4 class="fs-4">About Maruti Alto K10</h4>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Attributes</th>
+                            <th scope="col">Values</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Fuel Capacity</th>
+                            <td>40 ltr</td>
+
+                        </tr>
+                        <tr>
+                            <th scope="row">Drive Type</th>
+                            <td>Automatic</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Transmission</th>
+                            <td>Manual</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <!-- <p>It is a long established fact that a reader will be distracted by the readable content of a page when
                     looking at its
                     layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
                     as opposed to using
@@ -126,19 +150,22 @@
                     many web sites
                     still in their infancy. Various versions have evolved over the years, sometimes by accident,
                     sometimes on purpose
-                    (injected humour and the like).</p>
+                    (injected humour and the like).</p> -->
 
             </div>
             <div class="col-md-5 shadow mt-1">
                 <h4 class=" fs-2">Maruti Alto K10</h4>
                 <p class="fs-3 fw-bolder">₹ 1100 <i class="fs-6 fw-light">/month</i> <span
-                        class="fs-6 fw-light text-decoration-line-through">₹ 1500</span> <span class="fs-5 fw-bold">
-                        (34% OFF) </span></p>
+                        class="fs-6 fw-light text-decoration-line-through">₹ 1500</span></p>
                 <p class="fs-6 text-muted">Inclusive of all taxes</p>
                 <button type="button" class="btn btn-primary w-100 btn-lg">Book Now</button>
-                <p style="margin-top: 1rem;"> <i class="fas fa-check-circle m-1" style="color:green;"></i>Extend any time at normal prices. <a href="" class="ps-1"><u style="color:rgb(2, 124, 155)">Details</u></a></p>
-                <p> <i class="fas fa-check-circle m-1" style="color:green;"></i>Return anytime, Just pay fee difference <a href="" class="ps-1"><u style="color:rgb(2, 124, 155)">Details</u></a></p>
-                        <button type="button" class="btn btn-outline-primary w-100 btn-lg"><i class="fas fa-phone-alt"></i> Call us to know more</button>
+                <p style="margin-top: 1rem;"> <i class="fas fa-check-circle m-1" style="color:green;"></i>Extend any
+                    time at normal prices. <a href="" class="ps-1"><u style="color:rgb(2, 124, 155)">Details</u></a></p>
+                <p> <i class="fas fa-check-circle m-1" style="color:green;"></i>Return anytime, Just pay fee difference
+                    <a href="" class="ps-1"><u style="color:rgb(2, 124, 155)">Details</u></a>
+                </p>
+                <button type="button" class="btn btn-outline-primary w-100 btn-lg"><i class="fas fa-phone-alt"></i> Call
+                    us to know more</button>
             </div>
 
         </div>
