--- a/profile-page.html
+++ b/profile-page.html
@@ -93,6 +93,15 @@
 
         </div>
 
+        <!-- comment box design -->
+        <h4>Comment Box</h4>
+        <div class="comment mt-4 text-justify">
+            <h4>Aijaz Ahmad</h4> <span>- 19 July, 2021 </span><span class="fw-light fs-6">4:56 am</span> <br>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero
+                sequi
+                velit molestias doloremque molestiae dicta?</p>
+        </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
